--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="map-container"></div>
     <script src="//api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.js"></script>
     <script src="//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.24.0/L.Control.Locate.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/bundle.js"></script>
   </body>
 </html>
